<resources>

    <!-- URL ACCESO WEBSERVICE -->
    <!--string name="ip">http://192.168.56.1:8080/Agendame/</string-->
    <!--string name="ip">https://agendameupm.000webhostapp.com/</string-->
    <string name="ip">http://192.168.1.41/agendame/</string>

    <string name="app_name">AgendaMe</string>
    <string name="agenda">Agenda</string>
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="passwordOlvidado">¿Olvidaste tu contraseña?</string>
    <string name="botónIngresar">Ingresar</string>
    <string name="sinCuenta">¿No tienes una cuenta?</string>
    <string name="botónRegistrarse">Registrarse</string>
    <string name="actividadRegistrarse">Registrarse</string>
    <string name="confirmarContraseñaRegistro">Confirmar Contraseña</string>
    <string name="nombreReal">Nombre</string>
    <string name="telefono">Móvil</string>
    <string name="fotoPerfil">Agrega una foto de perfil</string>
    <string name="guardar">Guardar</string>
    <string name="perfil_nav">Perfil</string>
    <string name="agenda_nav">Agenda</string>
    <string name="amigos_nav">Amigos</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="nombre_perfil_perfil">Olivia Heldens</string>
    <string name="numero_amigos">21</string>
    <string name="amigos">Amigos</string>
    <string name="numero_citas">8</string>
    <string name="citas">Citas</string>
    <string name="correo_electronico_perfil">kuku@gmail.com</string>
    <string name="numero_telefono_perfil">+34 689 67 89 13</string>
    <string name="solicitudes_amistad">Solicitudes</string>
    <string name="solicitudes_eventos">Invitaciones a eventos</string>
    <string name="dia_mes">17</string>
    <string name="dia_semana">Mar</string>
    <string name="evento_fijo">Evento Fijo</string>
    <string name="evento_dinamico">Evento Dinámico</string>
    <string name="fecha">Fecha:</string>
    <string name="fecha_dummy">Viernes, 20 de febrero de 2019</string>
    <string name="nombre_evento">Nombre del evento</string>
    <string name="invitaciones">Invitar a amigos</string>
    <string name="agregar_ubicacion">Agregar ubicación</string>
    <string name="agregar_nota">Agregar una nota</string>
    <string name="hora_inicio">Hora de inicio:</string>
    <string name="hora_inicio_dummy">9:00 AM</string>
    <string name="hora_fin">Hora de fin:</string>
    <string name="hora_fin_dummy">11:00 AM</string>
    <string name="duracion_evento">Duración del evento</string>
    <string name="duracion_dummy">1 hora</string>
    <string name="rango_tiempo">Rango de tiempo para el evento</string>
    <string name="comienzo_rango">De:</string>
    <string name="fin_rango">A:</string>
    <string name="nombre_perfil_amigo">Mary Jenkins</string>
    <string name="eliminar_amigo">Retirar de agenda</string>
    <string name="correo_electronico_amigo">maryjen@gmail.com</string>
    <string name="numero_telefono_amigo">+34 689 23 91 07</string>
    <string name="nombre_evento_info_fijo">Chips at least</string>
    <string name="fecha_evento_info">Hoy, 5:30 &#8211; 6:30 PM</string>
    <string name="invitados">Invitados</string>
    <string name="aviso_notificaciones">Notificaciones activas</string>
    <string name="nombre_evento_info_dinamico">Marlon</string>
    <string name="rango_tiempo_info">Mié 18, entre 4:30 y 6:30 PM</string>
    <string name="duracion_info">Duración: 1 hora</string>
    <string name="actual_password">Contraseña Actual</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="title_activity_search_friend">SearchFriend</string>
    <string name="title_activity_solicitudes_eventos">SolicitudesEventos</string>
</resources>
