<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventoFijoActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/btGuardarFijo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="12dp"
            android:text="@string/guardar"
            android:textAllCaps="true"
            android:textColor="#ffffff" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/fecha"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:textColor="@color/colorPrimaryLight"/>

    <TextView
        android:id="@+id/datePickerFijo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/fecha_dummy"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/nomFijoEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/nombre_evento"
        android:textSize="34sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invitaciones"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_amigos_evento"/>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/agregar_amigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="mini"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_agregar"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyFriendEvFijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
</LinearLayout>

    <EditText
        android:id="@+id/ubicacionEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/agregar_ubicacion"
        android:textColor="@color/colorPrimaryLight" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recibir notificaciones"
        android:textSize="16sp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:buttonTint="@color/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="18dp">

        <TextView
            android:id="@+id/hora_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora_inicio"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryLight"/>

        <TextView
            android:id="@+id/hInicioEd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hora_inicio"
            android:layout_marginTop="15dp"
            android:text="@string/hora_inicio_dummy"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hora_fin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/hora_fin"
            android:layout_marginStart="130dp"
            android:textColor="@color/colorPrimaryLight"
            android:layout_toEndOf="@id/hora_inicio"/>

        <TextView
            android:id="@+id/hFinEd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hora_inicio"
            android:layout_alignStart="@id/hora_fin"
            android:layout_marginTop="15dp"
            android:text="@string/hora_fin_dummy"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/notaEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/agregar_nota"
        android:textColor="@color/colorPrimaryLight" />

</LinearLayout>