<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scaleType="center"
        app:srcCompat="@drawable/calendar_blur" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="280dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_marginTop="29dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/agendame" />

        <EditText
            android:id="@+id/nombreDeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="@color/colorPrimary"
            android:color="#fff41a71"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/emailLogin"
            android:inputType="textEmailAddress"
            android:paddingLeft="18dp"
            android:paddingBottom="17dp"
            android:textColorHint="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:color="#fff41a71"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/passwordLogin"
            android:inputType="textPassword"
            android:paddingLeft="18dp"
            android:paddingBottom="17dp"
            android:textColorHint="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:text="@string/passwordOlvidado"
            android:textColor="#fff41a71" />

        <Button
            android:id="@+id/ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="115dp"
            android:background="@drawable/boton_ingresar"
            android:text="@string/botónIngresar"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/sinCuenta"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="115dp"
            android:layout_marginRight="115dp"
            android:background="@drawable/boton_ingresar"
            android:text="@string/botónRegistrarse"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>